/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "org.apache.tez.dag.api.records";
option java_outer_classname = "DAGProtos";
option java_generate_equals_and_hash = true;

// DAG plan messages

// Many of these types have a dual in the Tez-api.  To reduce confusion, these types have prefix or suffix 
// of "Plan" to indicate they are to be used in the dag-plan.
// The big types use a suffix:  JobPlan, VertexPlan, EdgePlan 
//   --> these get more direct use in the runtime and the naming is natural.
// The enums and utility types use prefix: PlanVertexType, PlanEdgeConnectionPaatern, etc
//   --> there is not great naming choice for these that avoids ambiguity, but this one seems acceptable. 

enum PlanVertexType {
  INPUT = 0;
  NORMAL = 1;
  OUTPUT = 2;
}

enum PlanEdgeConnectionPattern {
  ONE_TO_ONE = 0;
  ONE_TO_ALL = 1;
  BIPARTITE = 2;
}

enum PlanEdgeSourceType {
  STABLE = 0;
  STABLE_PERSISTED = 1;
  STREAMING = 2;
}

message PlanKeyValuePair {
  required string key = 1;
  required string value = 2;
}

enum PlanLocalResourceType {
  FILE = 0;
  ARCHIVE = 1;
  PATTERN = 2;
}

enum PlanLocalResourceVisibility {
  PUBLIC = 0;
  PRIVATE = 1;
  APPLICATION = 2;
}

message PlanLocalResource {
  required string name = 1;
  required string uri = 2;
  required int64 size = 3;
  required int64 timeStamp = 4;
  required PlanLocalResourceType type = 5;
  required PlanLocalResourceVisibility visibility = 6;
  optional string pattern = 7; // only used if type=PATTERN
}

// Each taskLocationHint represents a single split in in the input.
// It is the list of [{rack,machines}] that host a replica of each particular split.
// For now it is represented as pair-of-arrays rather than array-of-pairs.
message PlanTaskLocationHint {
  repeated string rack = 1;
  repeated string host = 2;
}

message PlanTaskConfiguration {
  required int32 numTasks = 1;
  required int32 memoryMb = 2;
  required int32 virtualCores = 3;
  required string javaOpts = 4;
  required string taskModule = 5;
  repeated PlanLocalResource localResource = 6;
  repeated PlanKeyValuePair environmentSetting = 8;  
}

message TezEntityDescriptorProto {
  optional string class_name = 1;
  optional bytes user_payload = 2;
}

message VertexPlan {
  required string name = 1;
  required PlanVertexType type = 2;
  optional TezEntityDescriptorProto processor_descriptor = 3;
  required PlanTaskConfiguration taskConfig = 4;
  repeated PlanTaskLocationHint taskLocationHint = 7;
  repeated string inEdgeId = 8;
  repeated string outEdgeId = 9;
}

message EdgePlan {
  required string id = 1;
  required string inputVertexName = 2;
  required string outputVertexName = 3;
  required PlanEdgeConnectionPattern connectionPattern = 4;
  required PlanEdgeSourceType sourceType = 5;
  optional TezEntityDescriptorProto input_descriptor = 6;
  optional TezEntityDescriptorProto output_descriptor = 7;
}

message DAGPlan {
  required string name = 1;
  repeated VertexPlan vertex = 2;
  repeated EdgePlan edge = 3;
  repeated PlanKeyValuePair jobSetting = 4;
}


// DAG monitoring messages
message ProgressProto {
  optional int32 totalTaskCount = 1;
  optional int32 succeededTaskCount = 2;
  optional int32 runningTaskCount = 3;
  optional int32 failedTaskCount = 4;
  optional int32 killedTaskCount = 5;
}

enum VertexStatusStateProto {
  VERTEX_INITED = 0;
  VERTEX_RUNNING = 1;
  VERTEX_SUCCEEDED = 2;
  VERTEX_KILLED = 3;
  VERTEX_FAILED = 4;
  VERTEX_ERROR = 5;
}

message VertexStatusProto {
  optional VertexStatusStateProto state = 1;
  repeated string diagnostics = 2;
  optional ProgressProto progress = 3;
}

enum DAGStatusStateProto {
  DAG_SUBMITTED = 0;
  DAG_INITING = 1;
  DAG_RUNNING = 2;
  DAG_SUCCEEDED = 3;
  DAG_KILLED = 4;
  DAG_FAILED = 5;
  DAG_ERROR = 6;
}

message StringProgressPairProto {
  required string key = 1;
  required ProgressProto progress = 2;
}

message DAGStatusProto {
  optional DAGStatusStateProto state = 1;
  repeated string diagnostics = 2;
  optional ProgressProto DAGProgress = 3;
  repeated StringProgressPairProto vertexProgress = 4;  
}
